chore: Lint and Scramble!
